# filesu-inv-rs

./: Cargo.toml  thing.xml
src/: main.rs
