[package]
name = "filesu-inv-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_core = "0.12.0"
azure_identity = "0.12.0"
reqwest = "0.11.18"
tokio = { version = "1", features = ["full"] }
url = "2.3.1"
