[package]
name = "filesu-inv-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_core = "0.12.0"
azure_identity = "0.12.0"
csv = "1.2.2"
quick-xml = {version = "0.28.2", features = ["async-tokio"]}
reqwest = "0.11.18"
serde = "1.0.163"
serde-xml-rs = "0.6.0"
tokio = { version = "1", features = ["full"] }
url = "2.3.1"
